// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when a value is not selected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Facet
    name="Facet"
    onRemove={[Function]}
    onSelect={[Function]}
    options={
      Array [
        Object {
          "count": 1,
          "value": "1",
        },
        Object {
          "count": 1,
          "value": "2",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div>
        <div
          className="facet__title"
        >
          Facet
        </div>
        <ul
          className="facet__list"
        >
          <li
            className="facet__item"
          >
            <a
              className="facet__link"
              href="/"
              onClick={[Function]}
            >
              1
            </a>
             
            <span
              className="facet__count"
            >
              1
            </span>
          </li>
          <li
            className="facet__item"
          >
            <a
              className="facet__link"
              href="/"
              onClick={[Function]}
            >
              2
            </a>
             
            <span
              className="facet__count"
            >
              1
            </span>
          </li>
        </ul>
      </div>,
      "className": "facet",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="facet__title"
          >
            Facet
          </div>,
          <ul
            className="facet__list"
          >
            <li
              className="facet__item"
            >
              <a
                className="facet__link"
                href="/"
                onClick={[Function]}
              >
                1
              </a>
               
              <span
                className="facet__count"
              >
                1
              </span>
            </li>
            <li
              className="facet__item"
            >
              <a
                className="facet__link"
                href="/"
                onClick={[Function]}
              >
                2
              </a>
               
              <span
                className="facet__count"
              >
                1
              </span>
            </li>
          </ul>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Facet",
            "className": "facet__title",
          },
          "ref": null,
          "rendered": "Facet",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              Array [
                <li
                  className="facet__item"
                >
                  <a
                    className="facet__link"
                    href="/"
                    onClick={[Function]}
                  >
                    1
                  </a>
                   
                  <span
                    className="facet__count"
                  >
                    1
                  </span>
                </li>,
                <li
                  className="facet__item"
                >
                  <a
                    className="facet__link"
                    href="/"
                    onClick={[Function]}
                  >
                    2
                  </a>
                   
                  <span
                    className="facet__count"
                  >
                    1
                  </span>
                </li>,
              ],
            ],
            "className": "facet__list",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <a
                    className="facet__link"
                    href="/"
                    onClick={[Function]}
                  >
                    1
                  </a>,
                  " ",
                  <span
                    className="facet__count"
                  >
                    1
                  </span>,
                ],
                "className": "facet__item",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "1",
                    "className": "facet__link",
                    "href": "/",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "1",
                  "type": "a",
                },
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": 1,
                    "className": "facet__count",
                  },
                  "ref": null,
                  "rendered": 1,
                  "type": "span",
                },
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <a
                    className="facet__link"
                    href="/"
                    onClick={[Function]}
                  >
                    2
                  </a>,
                  " ",
                  <span
                    className="facet__count"
                  >
                    1
                  </span>,
                ],
                "className": "facet__item",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "2",
                    "className": "facet__link",
                    "href": "/",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "2",
                  "type": "a",
                },
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": 1,
                    "className": "facet__count",
                  },
                  "ref": null,
                  "rendered": 1,
                  "type": "span",
                },
              ],
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div>
          <div
            className="facet__title"
          >
            Facet
          </div>
          <ul
            className="facet__list"
          >
            <li
              className="facet__item"
            >
              <a
                className="facet__link"
                href="/"
                onClick={[Function]}
              >
                1
              </a>
               
              <span
                className="facet__count"
              >
                1
              </span>
            </li>
            <li
              className="facet__item"
            >
              <a
                className="facet__link"
                href="/"
                onClick={[Function]}
              >
                2
              </a>
               
              <span
                className="facet__count"
              >
                1
              </span>
            </li>
          </ul>
        </div>,
        "className": "facet",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="facet__title"
            >
              Facet
            </div>,
            <ul
              className="facet__list"
            >
              <li
                className="facet__item"
              >
                <a
                  className="facet__link"
                  href="/"
                  onClick={[Function]}
                >
                  1
                </a>
                 
                <span
                  className="facet__count"
                >
                  1
                </span>
              </li>
              <li
                className="facet__item"
              >
                <a
                  className="facet__link"
                  href="/"
                  onClick={[Function]}
                >
                  2
                </a>
                 
                <span
                  className="facet__count"
                >
                  1
                </span>
              </li>
            </ul>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Facet",
              "className": "facet__title",
            },
            "ref": null,
            "rendered": "Facet",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                undefined,
                Array [
                  <li
                    className="facet__item"
                  >
                    <a
                      className="facet__link"
                      href="/"
                      onClick={[Function]}
                    >
                      1
                    </a>
                     
                    <span
                      className="facet__count"
                    >
                      1
                    </span>
                  </li>,
                  <li
                    className="facet__item"
                  >
                    <a
                      className="facet__link"
                      href="/"
                      onClick={[Function]}
                    >
                      2
                    </a>
                     
                    <span
                      className="facet__count"
                    >
                      1
                    </span>
                  </li>,
                ],
              ],
              "className": "facet__list",
            },
            "ref": null,
            "rendered": Array [
              undefined,
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <a
                      className="facet__link"
                      href="/"
                      onClick={[Function]}
                    >
                      1
                    </a>,
                    " ",
                    <span
                      className="facet__count"
                    >
                      1
                    </span>,
                  ],
                  "className": "facet__item",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "1",
                      "className": "facet__link",
                      "href": "/",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "1",
                    "type": "a",
                  },
                  " ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 1,
                      "className": "facet__count",
                    },
                    "ref": null,
                    "rendered": 1,
                    "type": "span",
                  },
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <a
                      className="facet__link"
                      href="/"
                      onClick={[Function]}
                    >
                      2
                    </a>,
                    " ",
                    <span
                      className="facet__count"
                    >
                      1
                    </span>,
                  ],
                  "className": "facet__item",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "2",
                      "className": "facet__link",
                      "href": "/",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "2",
                    "type": "a",
                  },
                  " ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": 1,
                      "className": "facet__count",
                    },
                    "ref": null,
                    "rendered": 1,
                    "type": "span",
                  },
                ],
                "type": "li",
              },
            ],
            "type": "ul",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`renders correctly when a value is selected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Facet
    name="Facet"
    onRemove={[Function]}
    onSelect={[Function]}
    options={
      Array [
        Object {
          "count": 1,
          "value": "1",
        },
        Object {
          "count": 1,
          "value": "2",
        },
      ]
    }
    value="value"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div>
        <div
          className="facet__title"
        >
          Facet
        </div>
        <ul
          className="facet__list"
        >
          <li
            className="facet__selected"
          >
            value
             
            <span
              className="facet__remove"
            >
              (
              <a
                href="/"
                onClick={[Function]}
              >
                Remove
              </a>
              )
            </span>
          </li>
        </ul>
      </div>,
      "className": "facet",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="facet__title"
          >
            Facet
          </div>,
          <ul
            className="facet__list"
          >
            <li
              className="facet__selected"
            >
              value
               
              <span
                className="facet__remove"
              >
                (
                <a
                  href="/"
                  onClick={[Function]}
                >
                  Remove
                </a>
                )
              </span>
            </li>
          </ul>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Facet",
            "className": "facet__title",
          },
          "ref": null,
          "rendered": "Facet",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="facet__selected"
              >
                value
                 
                <span
                  className="facet__remove"
                >
                  (
                  <a
                    href="/"
                    onClick={[Function]}
                  >
                    Remove
                  </a>
                  )
                </span>
              </li>,
              false,
            ],
            "className": "facet__list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "value",
                  " ",
                  <span
                    className="facet__remove"
                  >
                    (
                    <a
                      href="/"
                      onClick={[Function]}
                    >
                      Remove
                    </a>
                    )
                  </span>,
                ],
                "className": "facet__selected",
              },
              "ref": null,
              "rendered": Array [
                "value",
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "(",
                      <a
                        href="/"
                        onClick={[Function]}
                      >
                        Remove
                      </a>,
                      ")",
                    ],
                    "className": "facet__remove",
                  },
                  "ref": null,
                  "rendered": Array [
                    "(",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Remove",
                        "href": "/",
                        "onClick": [Function],
                      },
                      "ref": null,
                      "rendered": "Remove",
                      "type": "a",
                    },
                    ")",
                  ],
                  "type": "span",
                },
              ],
              "type": "li",
            },
            false,
          ],
          "type": "ul",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div>
          <div
            className="facet__title"
          >
            Facet
          </div>
          <ul
            className="facet__list"
          >
            <li
              className="facet__selected"
            >
              value
               
              <span
                className="facet__remove"
              >
                (
                <a
                  href="/"
                  onClick={[Function]}
                >
                  Remove
                </a>
                )
              </span>
            </li>
          </ul>
        </div>,
        "className": "facet",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="facet__title"
            >
              Facet
            </div>,
            <ul
              className="facet__list"
            >
              <li
                className="facet__selected"
              >
                value
                 
                <span
                  className="facet__remove"
                >
                  (
                  <a
                    href="/"
                    onClick={[Function]}
                  >
                    Remove
                  </a>
                  )
                </span>
              </li>
            </ul>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Facet",
              "className": "facet__title",
            },
            "ref": null,
            "rendered": "Facet",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li
                  className="facet__selected"
                >
                  value
                   
                  <span
                    className="facet__remove"
                  >
                    (
                    <a
                      href="/"
                      onClick={[Function]}
                    >
                      Remove
                    </a>
                    )
                  </span>
                </li>,
                false,
              ],
              "className": "facet__list",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "value",
                    " ",
                    <span
                      className="facet__remove"
                    >
                      (
                      <a
                        href="/"
                        onClick={[Function]}
                      >
                        Remove
                      </a>
                      )
                    </span>,
                  ],
                  "className": "facet__selected",
                },
                "ref": null,
                "rendered": Array [
                  "value",
                  " ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "(",
                        <a
                          href="/"
                          onClick={[Function]}
                        >
                          Remove
                        </a>,
                        ")",
                      ],
                      "className": "facet__remove",
                    },
                    "ref": null,
                    "rendered": Array [
                      "(",
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Remove",
                          "href": "/",
                          "onClick": [Function],
                        },
                        "ref": null,
                        "rendered": "Remove",
                        "type": "a",
                      },
                      ")",
                    ],
                    "type": "span",
                  },
                ],
                "type": "li",
              },
              false,
            ],
            "type": "ul",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
